--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.5",
+    "@heroicons/react": "^2.0.13",
     "@reduxjs/toolkit": "^1.9.1",
+    "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -15,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -43,8 +47,14 @@
     ]
   },
   "devDependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
-    "tailwindcss": "^3.2.4"
+    "react-hook-form": "^7.40.0",
+    "react-router-dom": "^6.4.5",
+    "react-toastify": "^9.1.1",
+    "tailwind-merge": "^1.8.0",
+    "tailwindcss": "^3.2.4",
+    "zod": "^3.20.2"
   }
 }
