--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-html5video": "^2.5.1",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
